Revert "Fingerprint manifest scan rows null-safely"
This reverts commit 43765c49b8cfcf53aacc36a5ca2be24e9ba2e312.